tests/test87.rael.exp
Error [1:4]: Unmatched '('
| (87
|    ^
